fix: only double send height once and fix favorite-icon overflow issue

--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -23,6 +23,7 @@
 }
 
 .feature-card {
+  position: relative;
   border: 1px solid var(--md-sys-color-surface-5);
   border-radius: 1.75rem;
   padding: 1.25rem;
@@ -51,7 +52,7 @@
 .feature-card:hover {
   cursor: pointer;
   /* transform: scale(1.08); */
-  box-shadow: var(--md-sys-elevation-2);
+  /* box-shadow: var(--md-sys-elevation-2); */
 }
 
 .card-title.text-primary {
